overflow fixes

--- a/src/features/panorama/options/index.css
+++ b/src/features/panorama/options/index.css
@@ -20,12 +20,10 @@ html {
   font-size: 14px;
   scrollbar-color: rgb(var(--grey)) transparent;
   scrollbar-width: thin;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 body {
-  margin: -0.5ch;
-
   background-color: rgb(var(--white));
   color: rgb(var(--black));
   font-family: "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
@@ -53,7 +51,6 @@ ul {
 li {
   display: flex;
   align-items: center;
-  padding: 0.5ch;
 }
 
 input[type="text"] {
